fix odd page single to double expansion; cleanup; other minor fixes in header on mobile

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -2,7 +2,7 @@
 
 ajam_blue = #2677B9
 max_width = 577px
-transition_opts = 400ms linear
+transition_opts = 1000ms linear
 gutter_width = 40px
 header_height = 46px
 header_item_height = 28px
@@ -779,4 +779,7 @@ body[data-format="double"][data-bookend="true"] .page-container.exit-to-right.ri
 			margin-top 0!important
 	#pages
 		width 100%
+	.header-group .header-item-container
+		padding 0 4px 0 0 
+
 /* end media queries */
